--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,7 @@
       <header class="header">
         <div class="header-content">
           <div class="logo">
-            <span class="logo-icon"><img src="assets/Fynai_white.png" alt="Fynai Logo" style="height: 24px; width: auto;"></span>
+            <span class="logo-icon"><img src="assets/Fynai.png" alt="Fynai Logo" style="height: 24px; width: auto;"></span>
             <span class="logo-text">Fynai</span>
           </div>
           <nav class="nav-menu">
