--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -117,7 +117,7 @@
           </div>
           <div class="footer-section">
             <h3>Contact</h3>
-            <p>Email: Fynai@gmail.com</p>
+            <p>Email: fynai.daily@gmail.com</p>
             <p>GitHub: <a href="https://github.com/kookmin-sw/capstone-2025-41">Repository</a></p>
           </div>
           <div class="footer-section">
